<resources>
    <string name="app_name">PanAppetit</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="informative">Informativo</string>
    <string name="detail_diaolog">Detalle del Dialogo</string>

    <string name="init_section">Inicio de Sección</string>
    <string name="Email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="CaracteresPass">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ*</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="registrar_usuario"><u> Registrar Usuario </u></string>


    <string name="register_user">Registra tu Usuario</string>
    <string name="conf_password">Confirmar Contraseña</string>
    <string name="btn_create">Crear Usuario</string>

    <string name="internet">Conexión de Internet</string>
    <string name="not_connection_internet">No tienes conexion a internet, busca una coneccion</string>
    <string name="fields_empty">Campos Vacios</string>
    <string name="details_fields_empty">Verifique, ya que hay algun campo vacio</string>
    <string name="credentials_incorrect">Credenciales</string>
    <string name="details_credentials_incorrect">Verificas tus credenciales, estan incorrectas</string>
    <string name="firebase_login">Firebase Login</string>
    <string name="firebase_register">Firebase Register</string>
    <string name="details_password">Los campos contraseña y confirmar contraseña no coinciden</string>
    <string name="Error">Error</string>
    <string name="user_create">Se creo correctamente el usuario</string>
    <string name="login_user">Se Logueo correctamente el usuario</string>
    <string name="title_home">Menu de Delicias</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="imagen_url">Imagen (URL)</string>
    <string name="value">Value</string>
    <string name="name">Nombre</string>
    <string name="descript">Descripción</string>
    <string name="details">Detalles</string>
    <string name="count">"Cantidad: "</string>
    <string name="precio_unitario">"Precio Unitario: "</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
    <string name="add_car">Añadir al Carrito</string>
    <string name="count_car">Cantidad</string>
    <string name="shopping">Mi Carro de Compras</string>
    <string name="seleccionar_todo">Seleccionar Todo</string>
    <string name="comprar">Comprar</string>
    <string name="admin">admin</string>
    <string name="fiels_vacio">Campos Vacios</string>
    <string name="mess_fiels_vacio">Todos los campos deben estar llenos, verifica.</string>
    <string name="actualizar_producto">Actualizar Producto</string>
    <string name="insertar_usuario">Insertar usuario</string>
    <string name="insert_user">"Se inserto correctamente el producto con el id: "</string>
    <string name="update_user">"Se actualizo correctamente el producto con el id: "</string>
    <string name="update_usuario">Actualizar Producto</string>
    <string name="save">Guardar</string>
    <string name="delete_product">Eliminación</string>
    <string name="rest_cantidad">No se puede disminuir mas la cantidad</string>
    <string name="cantidad">"Cantidad Producto"</string>
    <string name="stock">"Stock Producto: "</string>
    <string name="cantidad_cero">La cantidad debe ser diferente de cero</string>
    <string name="el_usuario">"El usuario "</string>
    <string name="se_deslogueo">" se deslogueo"</string>
    <string name="no_shopping">No tienes ningun producto en el carrito de compras</string>
    <string name="monto_total">"Monto Total: "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">Historial de Pedidos</string>
    <string name="cantidad_max">"La cantidad debe ser igual o menor a: "</string>
    <string name="multiple_liness">Your long text goes here. It will wrap into multiple lines automatically.</string>

</resources>